# logovo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix  main.cc
liblogovo/: CMakeLists.txt  handler.cc  handler.h  server.cc  server.h  tail.cc  tail.h
logovo/: CMakeLists.txt  main.cc  server.cc  server.h
tests/: CMakeLists.txt  main.cc  test_tail.cc
tools/: CMakeLists.txt
tools/loggen/: CMakeLists.txt  main.cc
